fix: inconsistent spacing

--- a/packages/components/bolt-ul/src/ul.scss
+++ b/packages/components/bolt-ul/src/ul.scss
@@ -1,7 +1,7 @@
 @import '@bolt/core';
 
 // Register Custom Block Element
-@include bolt-custom-element('bolt-ul', block, small);
+@include bolt-custom-element('bolt-ul', block, medium);
 
 // Styles
 .c-bolt-ul {
